Converted to kotlin

--- a/samples/hellosceneform/app/build.gradle
+++ b/samples/hellosceneform/app/build.gradle
@@ -13,6 +13,8 @@
  * limitations under the License.
  */
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
@@ -51,6 +53,7 @@ dependencies {
     //implementation "com.google.ar.sceneform:core:1.13.0"
 
     implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply plugin: 'com.google.ar.sceneform.plugin'
@@ -59,4 +62,7 @@ sceneform.asset('sampledata/models/model.obj',
         'default',
         'sampledata/models/model.sfa',
         'src/main/res/raw/model')
+repositories {
+    mavenCentral()
+}
 
